RESOLVED FIXED279175
Fix Debug build with recent GCC
https://bugs.webkit.org/show_bug.cgi?id=279175
Summary Fix Debug build with recent GCC
Claudio Saavedra
Reported 2024-09-05 02:42:18 PDT
error: comparison of unsigned expression in ‘>= 0’ is always true [-Werror=type-limits]
Attachments
Claudio Saavedra
Comment 1 2024-09-05 02:42:56 PDT
EWS
Comment 2 2024-09-05 06:20:21 PDT
Committed 283204@main (eacdae21eeba): <https://commits.webkit.org/283204@main> Reviewed commits have been landed. Closing PR #33172 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-05 06:22:22 PDT
Note You need to log in before you can comment on or make changes to this bug.