Fix Debug build with recent GCC https://bugs.webkit.org/show_bug.cgi?id=279175

Reviewed by Alan Baradlay.

error: comparison of unsigned expression in ‘>= 0’ is always true [-Werror=type-limits]

* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::computeInlineBoxBoundaryTextSpacingsIfNeeded):

Canonical link: https://commits.webkit.org/283204@main